# rsomics-beta-diversity

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs  metric.rs
tests/: compat.rs  json_envelope.rs  oracle_skbio.py
tests/golden/: counts.tsv  edge.tsv  empty.braycurtis.expected  empty.tsv  huge.cityblock.expected  huge.tsv  tiny.braycurtis.expected  tiny.tsv
