[package]
name = "rsomics-beta-diversity"
version = "0.1.1"
description = "Pairwise between-sample beta-diversity distance matrix (Bray-Curtis, Jaccard, Euclidean, Canberra, Manhattan) from a feature count table — scikit-bio diversity.beta_diversity equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-beta-diversity"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-beta-diversity"
path = "src/main.rs"

[lib]
name = "rsomics_beta_diversity"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
